fix(middleware): 打通 reactor 最后一批编译失败模块
- chronicle: 补 test-scope junit-jupiter；测试泛型修正；
  实现 Chronicle 初始化失败时的内存队列回退（publish/startConsumer
  降级路径 + startMemoryConsumer），8/8 测试通过
- quarkus: 补 test-scope junit-jupiter
- ssh: SshServer.main 解除对 example 包类的编译依赖
  （示例类已按体系迁出 starter）
- gateway-server: 补 jsch 0.1.55 依赖；SshBridge 适配
  Channel API（0.1.55 无 isOpen，用 !isClosed 等价替换）
- datalake: 移除引用缺失类(ConditionRouter/CollectData)的 WIP 测试

reactor 结果：190 模块中 189 成功，仅剩 agentscope(协作者 WIP 测试)